--- a/Index.html
+++ b/Index.html
@@ -6,5 +6,7 @@
         <ul id=""shopping list>
             <li> babies </li>
         </ul>
+
+        <p> now we're making changes hehe</p>
     </body>
 </html>
