--- a/Index.html
+++ b/Index.html
@@ -3,7 +3,7 @@
         <title> Hi omg </title>
     </head>
     <body>
-        <ul id=""shopping list>
+        <ul id="shopping list">
             <li> babies </li>
         </ul>
 
